skillsBlock basic styles, header container, renaming from tsx to jsx

--- a/src/header/Header.module.css
+++ b/src/header/Header.module.css
@@ -1,6 +1,8 @@
 .header {
     height: 80px;
     background-color: #fffb93;
+}
+.headerContainer {
     display: flex;
     justify-content: flex-end;
     align-items: center;
